# ehrapy

./: .bandit.yml  .buildinfo  .cookietemple.yml  .cruft.json  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  Untitled.ipynb  authors.html  biome.jsonc  code_of_conduct.html  codecov.yml  cohort_tracking.ipynb  contributing.html  cookietemple.cfg  dowhy.ipynb  genindex.html  index.html  installation.html  issue_reproduce.ipynb  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  ree.py  reference.html  references.html  search.html  (+4 more)
.github/: dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  general_question.md
.github/workflows/: build.yml  build_package.yml  labeler.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  release.yaml  release.yml  release_drafter.yml  run_cookietemple_lint.yml  run_notebooks.yml  run_tests.yml  sync_project.yml  test.yml  test_cpu.yml  test_gpu.yml  test_windows_stuff.yml
_modules/: index.html
_sources/: authors.rst.txt  contributing.rst.txt  index.md.txt  reference.rst.txt  usage.rst.txt
_sources/tutorials/: index.md.txt
_sources/usage/: usage.md.txt
_static/: custom_cookietemple.css  pygments.css
_static/dark_mode_css/: dark.css
docs/: Makefile  api.md  authors.md  authors.rst  changelog.md  code_of_conduct.md  conf.py  contributing.md  contributing.rst  ecosystem.md  index.md  index.rst  installation.md  installation.rst  make.bat  references.bib  references.md  references.rst  requirements.txt  usage.rst  utils.py
docs/_ext/: edit_on_github.py  typed_returns.py
docs/_static/: custom_cookietemple.css
docs/about/: background.md  cite.md
docs/api/: anndata_index.md  api.md  datasets_index.md  ehrapy.data.mimic_2.rst  ehrapy.data.mimic_3_demo.rst  io_index.md  plot_index.md  preprocessing_index.md  settings_index.md  tools_index.md
docs/data/: ehrapy.api.data.mimic_2.rst  ehrapy.api.data.mimic_2_demo.rst  ehrapy.api.data.mimic_3.rst
docs/encode/: ehrapy.api.encode.encode.rst  ehrapy.api.encode.type_overview.rst  ehrapy.api.encode.undo_encoding.rst  ehrapy.encode.encode.rst
docs/io/: ehrapy.io.read.rst
docs/plot/: ehrapy.api.plot.clustermap.rst  ehrapy.api.plot.diffmap.rst  ehrapy.api.plot.dotplot.rst  ehrapy.api.plot.embedding.rst  ehrapy.api.plot.embedding_density.rst  ehrapy.api.plot.matrixplot.rst  ehrapy.api.plot.paga.rst  ehrapy.api.plot.spatial.rst
docs/preprocessing/: ehrapy.api.preprocessing.log1p.rst  ehrapy.api.preprocessing.neighbors.rst  ehrapy.api.preprocessing.normalize_total.rst  ehrapy.api.preprocessing.pca.rst  ehrapy.api.preprocessing.subsample.rst
docs/read_write/: ehrapy.io.read.rst
docs/tools/: ehrapy.api.tools.DeepL.translate_obs_column.rst  ehrapy.api.tools.dendrogram.rst  ehrapy.api.tools.dpt.rst  ehrapy.api.tools.embedding_density.rst  ehrapy.api.tools.paga.rst  ehrapy.api.tools.test.rst  ehrapy.api.tools.umap.rst
docs/tutorials/: .gitignore  .pre-commit-config.yaml  README.md  cohort_tracking.ipynb  diabetic_retinopathy_fate_mapping.ipynb  drug_screening.md  ehrapy_introduction.ipynb  fhir.ipynb  index.md  index.rst  medcat.ipynb  mimic_2_causal_inference.ipynb  mimic_2_survival_analysis.ipynb  mimic_3_demo.ipynb  ontology_mapping.ipynb
docs/usage/: api.rst  cli.rst  usage.md  usage.rst
docs/util/: ehrapy.api.util.adata_type_overview.rst  ehrapy.api.util.ann_data_tree.rst
ehrapy/: Untitled-1.ipynb  __init__.py  __main__.py  _array_api.py  _compat.py  _progress.py  _settings.py  _types.py  _util.py  _utils_available.py  _utils_data.py  _utils_doc.py  _utils_rendering.py  anndata_ext.py  logger.py  logging.py
ehrapy/anndata/: __init__.py  _constants.py  _feature_specifications.py  anndata_ext.py
ehrapy/api/: __init__.py  _anndata_util.py  _settings.py  _util.py  anndata_ext.py
ehrapy/cli/: upgrade.py
ehrapy/core/: _constants.py  _tool_available.py  meta_information.py  str_matching.py  tool_available.py
ehrapy/data/: __init__.py  _dataloader.py  _datasets.py
ehrapy/get/: __init__.py  _get.py
ehrapy/io/: __init__.py  _read.py  _utility_io.py  _write.py
ehrapy/plot/: __init__.py  _catplot.py  _colormaps.py  _medcat.py  _missingno.py  _missingno_pl_api.py  _ncp.py  _plot_util.py  _qc.py  _sa_plot.py  _sankey.py  _scanpy_pl_api.py  _stratified_table_one.py  _survival_analysis.py  _timeseries.py  _variable_correlation_plot.py  plot_medcat.py  sa_plot.py
ehrapy/preprocessing/: __init__.py  _balanced_sampling.py  _balanced_sampling_native.py  _bias.py  _correlation.py  _data_imputation.py  _encode.py  _encoding.py  _expand_measurements.py  _filter.py  _highly_variable_features.py  _imputation.py  _missing_data.py  _neighbors.py  _normalization.py  _outliers.py  _quality_control.py  _sampling.py  _scanpy_pp_api.py  _summarize_measurements.py  _types.py  highly_variable_features.py
ehrapy/time_series/: __init__.py  _time_series.py
ehrapy/tools/: __init__.py  _correlation.py  _datatypes.py  _method_options.py  _ncp.py  _sa.py  _scanpy_tl_api.py  _stratified_table_one.py  _survival_analysis.py  _utils.py
ehrapy/util/: __init__.py  _doc_util.py  levenstein_distance.py
ehrapy_data/: dermatology.csv
makefiles/: Linux.mk  Windows.mk
notebooks/: EhrapyDemo.ipynb  None-requirements.txt  ehrapy_mimic2.csv  medcat_demo.ipynb  mimic_2.h5ad  mimic_2.ipynb  mimic_3_demo.ipynb
tests/: __init__.py  _test_util.py  conftest.py  test_anndata_ext.py  test_compat.py  test_gpu.py  test_main.py
tests/_pytest/: params.py
tests/_scripts/: catplot_create_expected_plots.ipynb  clustermap_scanpy_expected.ipynb  cohort_tracker_test_create_expected_plots.ipynb  coxph_forestplot_create_expected.ipynb  dendogram_expected.ipynb  diffmap_expected.ipynb  dotplot_scanpy_plt_expected.ipynb  (+44 more)
tutorials/: index.html
usage/: api.html  cli.html  usage.html
(+789 files in other folders)
