[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "ehrapy"
version = "0.13.0"
description = "Electronic Health Record Analysis with Python."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {file = "LICENSE"}
authors = [
    {name = "Lukas Heumos"},
    {name = "Philipp Ehmele"},
    {name = "Eljas Roellin"},
    {name = "Lilly May"},
    {name = "Tim Treis"},
    {name = "Altana Namsaraeva"},
    {name = "Vladimir Shitov"},
    {name = "Luke Zappia"},
    {name = "Xinyue Zhang"},
]
maintainers = [
    {name = "Lukas Heumos", email = "lukas.heumos@posteo.net"},
]
urls.Documentation = "https://ehrapy.readthedocs.io"
urls.Source = "https://github.com/theislab/ehrapy"
urls.Home-page = "https://github.com/theislab/ehrapy"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "ehrdata",
    "scanpy",
    "requests",
    "miceforest",
    "scikit-misc",  # required for seuratv3 highly variable features
    "lifelines>=0.30.0",
    "missingno",
    "thefuzz[speedup]",
    "fhiry",
    "pyampute",
    "tableone",
    "fknni>=1.2.0",
    "filelock",
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "leidenalg",  # careful - GPL
    "igraph",  # careful - GPL
    "fast-array-utils[sparse,accel]",
    "tslearn",
    "holoviews[recommended]"
]

[project.optional-dependencies]
causal = [
    "dowhy>=0.14",
    # manual lower bound necessary or else dowhy installs something old and incompatible
    "cvxpy>=1.7.3"
]
dask = [
    "anndata[dask]",
    "dask-ml>=2025.1.0",
]
rapids12 = ["rapids-singlecell[rapids12]"]
rapids13 = ["rapids-singlecell[rapids13]"]
dev = [
    "pre-commit",
]
doc = [
    "docutils",
    "sphinx",
    "scanpydoc",
    "sphinx-book-theme",
    "myst-nb",
    "myst-parser",
    "sphinxcontrib-bibtex",
    "sphinx-issues",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinx-design",
    "sphinx-tabs",
    "sphinx-last-updated-by-git",
    "sphinx-automodapi",
    "sphinxext-opengraph",
    "pygments",
    "nbsphinx",
    "nbsphinx-link",
    "ipykernel",
    "ipython",
    "ehrapy[dask]"
]
test = [
    "ehrapy[dask,causal]",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]


[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc", "dask", "causal" ]
scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# CPU
[tool.hatch.envs.hatch-test]
features = [ "dask", "causal" ]

[[tool.hatch.envs.hatch-test.matrix]]
python = [ "3.12", "3.14" ]

# GPU
[tool.hatch.envs.hatch-test-gpu]
features = ["test"]
# custom script to not run coverage
scripts.run = "pytest -m gpu {args}"

overrides.matrix.cuda.features = [
    { if = ["12"], value = "rapids12" },
    { if = ["13"], value = "rapids13" },
]

[[tool.hatch.envs.hatch-test-gpu.matrix]]
python = ["3.13"]
# cuda 13 currently requires a new AMI
cuda = ["12"]#, "13"]

[tool.coverage.run]
source_pkgs = ["ehrapy"]
omit = [
    "**/test_*.py",
    "ehrapy/data/_datasets.py",  # Difficult to test
]

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
    "-m not gpu",
]
markers = [
    "conda: marks a subset of tests to be ran on the Bioconda CI.",
    "extra: marks tests that require extra dependencies."
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::anndata.OldFormatWarning:",
    "ignore:X converted to numpy array with dtype object:UserWarning",
    "ignore:`flavor='seurat_v3'` expects raw count data, but non-integers were found:UserWarning",
    "ignore:All-NaN slice encountered:RuntimeWarning",
    "ignore:Observation names are not unique. To make them unique, call `.obs_names_make_unique`.:UserWarning",
    "ignore:Trying to modify attribute `.var` of view, initializing view as actual.:anndata.ImplicitModificationWarning",
    "ignore:Transforming to str index.:anndata.ImplicitModificationWarning:",
    "ignore:Modifying `X` on a view results in data being overridden:anndata.ImplicitModificationWarning"
]
minversion = 6.0
norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
    "TCH",  # Typing imports
    "NPY",  # Numpy specific rules
    "PTH"  # Use pathlib
]
ignore = [
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
    # Imports unused
    "F401",
    # camcelcase imported as lowercase
    "N813",
    # module import not at top level of file
    "E402",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
